fix: fab letter spacing

--- a/_fixes.scss
+++ b/_fixes.scss
@@ -58,6 +58,8 @@ html {
   --mat-optgroup-label-text-line-height: inherit;
   --mat-optgroup-label-text-size: 14px;
   --mat-optgroup-label-text-tracking: normal;
+
+  --mdc-extended-fab-label-text-tracking: normal;
 }
 
 .mat-mdc-dialog-container {
